--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
-
 html,
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  border: 2px solid red;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    border: 2px solid red;
 }
 
 @font-face {
@@ -39,87 +38,130 @@ h1 {
 body {
     font-family: 'Ronald-Flick', sans-serif;
     font-size: 36px;
+    color: #3e3d3d;
 }
 
 .wrapper {
     background-image: url(../img/background.png);
     background-size: 100%;
     height: 5000px;
-    background-repeat: no-repeat;
+    background-repeat: x bottom;
 }
+
 .content-wrapper {
     width: 85%;
 }
 
 /* NAV BAR */
 .menu {
-  position: fixed;
-  float: right;
-  text-align: center;
-  right: 0;
-  top: 15%;
-  width: 15%;
+    position: fixed;
+    float: right;
+    text-align: center;
+    right: 0;
+    top: 15%;
+    width: 15%;
 }
 
 .menu__link {
-  display: inline-block;
-  font-family: 'Ronald-Flick', sans-serif;
-  color: #153053;
-  text-decoration: none;
-  position: relative;
-  font-weight: 300;
-  font-size: 57px;
-  line-height: 2;
-  letter-spacing: 0.040em;
+    display: inline-block;
+    font-family: 'Ronald-Flick', sans-serif;
+    color: #153053;
+    text-decoration: none;
+    position: relative;
+    font-weight: 300;
+    font-size: 57px;
+    line-height: 2;
+    letter-spacing: 0.040em;
 }
 
 .menu__link svg {
-  fill: none;
-  stroke: #70aec9;
-  stroke-width: 2;
-  stroke-miterlimit: 10;
-  stroke-dasharray: 338;
-  stroke-dashoffset: 338;
-  stroke-linecap: round;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: calc(100% + 60px);
-  opacity: 0;
-  transform: translate(-50%, -50%);
-  transition: stroke-dashoffset 0s 0.2s, opacity 0.2s;
-  z-index: -1;
+    fill: none;
+    stroke: #70aec9;
+    stroke-width: 2;
+    stroke-miterlimit: 10;
+    stroke-dasharray: 338;
+    stroke-dashoffset: 338;
+    stroke-linecap: round;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: calc(100% + 60px);
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    transition: stroke-dashoffset 0s 0.2s, opacity 0.2s;
+    z-index: -1;
 }
 
 .menu__link--active svg {
-  stroke: #ff4c4c;
+    stroke: #ff4c4c;
 }
 
 .menu__link--active svg,
 .menu__link:hover svg {
-  stroke-dashoffset: 0;
-  opacity: 1;
-  transition: opacity 0s, stroke-dashoffset 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    stroke-dashoffset: 0;
+    opacity: 1;
+    transition: opacity 0s, stroke-dashoffset 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 /* TOP */
 #container {
-  min-height: 700px;
+    min-height: 500px;
 }
+
 #container svg {
-  min-height: 700px;
+    min-height: 500px;
 }
+
 .hidden {
-  width: 0;
-  opacity: 0;
-  overflow: hidden;
+    width: 0;
+    opacity: 0;
+    overflow: hidden;
 }
+
 .top-img-1 img {
     position: absolute;
     top: 25%;
+    transition: opacity 2s;
 }
+
 .top-img-2 img {
     position: absolute;
     top: 40%;
     right: 15%;
+}
+
+/* TITLE */
+h1 {
+    background-image: url(../img/title.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    color: #000;
+    margin: 60px 0px;
+}
+
+/* ABOUT ME */
+.about-me-container {
+    background-image: url(../img/about-me.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+.about-me-container img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.about-me-container p {
+    margin: 20px 0px;
+    text-align: center;
+}
+/* WORKS */
+.works-container p {
+    background-image: url(../img/highlight.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
